--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% block header %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,16 +10,16 @@
 
     <div class="container">
 
-      <!-- child template -->
+      <!-- header  template -->
       {% include "search.html" %}
       {% block searchBlock %}{% endblock %}
       <p></p>
       {% include "upload.html" %}
       {% block uploadBlock %} {%endblock%}
       <p></p>
-      {% include "results.html" %}
-      {% block resultsBlock %}{% endblock %}
+      <!--figure out logic for which block to render-->
       
     </div>
   </body>
 </html>
+{% endblock %}
